<resources>
    <string name="app_name">DemoDialog</string>
    <string name="d1">DEMO 1 - SIMPLE DIALOG</string>
    <string name="d2">DEMO 2 - BUTTONS DIALOG</string>
    <string name="txt">Enter Some Text</string>
    <string name="d3">DEMO 3 TEXT INPUT DIALOG</string>
    <string name="exercise3">EXERCISE 3</string>
    <string name="txt1">Enter number 1: </string>
    <string name="txt2">Enter number 2: </string>
    <string name="d4">DEMO 4 DATE PICKER DIALOG</string>
    <string name="d5">DEMO 5 TIME PICKER DIALOG</string>
</resources>